lowered report button z-index. Notifies is answer correct/incorrect

--- a/client/ios.css
+++ b/client/ios.css
@@ -264,6 +264,7 @@ input {
 
 .buttons {
   position: absolute;
+  z-index: -100;
   top: 23px;
   left: 100px;
   margin-left: 10%;
